--- a/1.md
+++ b/1.md
@@ -1,169 +1,220 @@
+
+
+
+
 ```markdown
-###Consider the following schema for Bank Database:
+#Consider the schema for College Database:
+
+
+
 ## Table Structure and Output
 
-### `ACCOUNT` Table
+### `STUDENT` Table
 
 ```sql
-CREATE TABLE ACCOUNT (
-    ACC_NO INT,
-    BRANCH_ID VARCHAR(10),
-    ACCOUNT_TYPE VARCHAR(10),
-    CUSTOMER_ID VARCHAR(10),
-    PRIMARY KEY(ACC_NO),
-    FOREIGN KEY(BRANCH_ID) REFERENCES BRANCH(BRANCH_ID) ON DELETE CASCADE
+CREATE TABLE STUDENT (
+    USN VARCHAR2(20),
+    SNAME VARCHAR2(10),
+    ADDRESS VARCHAR2(10),
+    PHONE NUMBER(10),
+    GENDER VARCHAR2(10),
+    PRIMARY KEY(USN)
 );
 ```
 
 **Output** (empty table after creation):
 
-| ACC_NO | BRANCH_ID | ACCOUNT_TYPE | CUSTOMER_ID |
-|--------|-----------|--------------|-------------|
+| USN          | SNAME | ADDRESS    | PHONE    | GENDER |
+|--------------|-------|------------|----------|--------|
+| (Empty Table) |       |            |          |        |
 
-#### Inserting Data into `ACCOUNT`:
+#### Inserting Data into `STUDENT`:
 
 ```sql
-INSERT INTO ACCOUNT VALUES (123, 'B1', 'SAVINGS', 'C1');
-INSERT INTO ACCOUNT VALUES (456, 'B5', 'RECURRENT', 'C2');
-INSERT INTO ACCOUNT VALUES (789, 'B1', 'SAVINGS', 'C1');
-INSERT INTO ACCOUNT VALUES (1122, 'B2', 'FD', 'C3');
-INSERT INTO ACCOUNT VALUES (1334, 'B1', 'SAVINGS', 'C4');
-INSERT INTO ACCOUNT VALUES (1234, 'B3', 'FD', 'C5');
-INSERT INTO ACCOUNT VALUES (5876, 'B4', 'RECURRENT', 'C3');
+INSERT INTO STUDENT VALUES ('4SF20CS089', 'AJAY', 'MANGALORE', 733825, 'MALE');
+INSERT INTO STUDENT VALUES ('4SF20IS109', 'VARSHINI', 'BANTWAL', 896523, 'FEMALE');
+INSERT INTO STUDENT VALUES ('4SF20CS098', 'NAVISH', 'UDUPI', 9956258, 'MALE');
+INSERT INTO STUDENT VALUES ('4SF20CD001', 'SAHANA', 'SURATHKAL', 8752683, 'FEMALE');
+INSERT INTO STUDENT VALUES ('4SF20CS088', 'KAVYA', 'MANGALORE', 78965231, 'FEMALE');
 ```
 
 **Output** after insertion:
 
-| ACC_NO | BRANCH_ID | ACCOUNT_TYPE | CUSTOMER_ID |
-|--------|-----------|--------------|-------------|
-| 123    | B1        | SAVINGS      | C1          |
-| 456    | B5        | RECURRENT    | C2          |
-| 789    | B1        | SAVINGS      | C1          |
-| 1122   | B2        | FD           | C3          |
-| 1334   | B1        | SAVINGS      | C4          |
-| 1234   | B3        | FD           | C5          |
-| 5876   | B4        | RECURRENT    | C3          |
+| USN          | SNAME   | ADDRESS    | PHONE     | GENDER |
+|--------------|---------|------------|-----------|--------|
+| 4SF20CS089   | AJAY    | MANGALORE  | 733825    | MALE   |
+| 4SF20IS109   | VARSHINI| BANTWAL    | 896523    | FEMALE |
+| 4SF20CS098   | NAVISH  | UDUPI      | 9956258   | MALE   |
+| 4SF20CD001   | SAHANA  | SURATHKAL  | 8752683   | FEMALE |
+| 4SF20CS088   | KAVYA   | MANGALORE  | 78965231  | FEMALE |
 
 ---
 
-### `CUSTOMER` Table
+### `SEMSEC` Table
 
 ```sql
-CREATE TABLE CUSTOMER (
-    CUSTOMER_ID VARCHAR(10),
-    CUSTOMER_NAME VARCHAR(20),
-    CUSTOMER_AGE INT,
-    CUSTOMER_ADDRESS VARCHAR(20),
-    PRIMARY KEY(CUSTOMER_ID)
+CREATE TABLE SEMSEC (
+    SSID NUMBER(5),
+    SEM NUMBER(2),
+    SECTION VARCHAR2(1),
+    PRIMARY KEY(SSID)
 );
 ```
 
 **Output** (empty table after creation):
 
-| CUSTOMER_ID | CUSTOMER_NAME | CUSTOMER_AGE | CUSTOMER_ADDRESS |
-|-------------|---------------|--------------|------------------|
+| SSID | SEM | SECTION |
+|------|-----|---------|
+|      |     |         |
 
-#### Inserting Data into `CUSTOMER`:
+#### Inserting Data into `SEMSEC`:
 
 ```sql
-INSERT INTO CUSTOMER VALUES ('C1', 'RAVI', 22, 'MANGALURU', 8745263);
-INSERT INTO CUSTOMER VALUES ('C2', 'ASHA', 26, 'DELHI', 98745641);
-INSERT INTO CUSTOMER VALUES ('C3', 'VARUN', 23, 'KASARAGOD', 78954623);
-INSERT INTO CUSTOMER VALUES ('C4', 'ARPITHA', 22, 'MANGALURU', 9856325);
-INSERT INTO CUSTOMER VALUES ('C5', 'SACHIN', 23, 'BENGALURU', 78541365);
+INSERT INTO SEMSEC VALUES(1, 4, 'A');
+INSERT INTO SEMSEC VALUES(2, 4, 'C');
+INSERT INTO SEMSEC VALUES(3, 8, 'A');
+INSERT INTO SEMSEC VALUES(4, 8, 'B');
+INSERT INTO SEMSEC VALUES(5, 8, 'C');
+INSERT INTO SEMSEC VALUES(6, 5, 'A');
 ```
 
 **Output** after insertion:
 
-| CUSTOMER_ID | CUSTOMER_NAME | CUSTOMER_AGE | CUSTOMER_ADDRESS |
-|-------------|---------------|--------------|------------------|
-| C1          | RAVI          | 22           | MANGALURU        |
-| C2          | ASHA          | 26           | DELHI            |
-| C3          | VARUN         | 23           | KASARAGOD        |
-| C4          | ARPITHA       | 22           | MANGALURU        |
-| C5          | SACHIN        | 23           | BENGALURU        |
+| SSID | SEM | SECTION |
+|------|-----|---------|
+| 1    | 4   | A       |
+| 2    | 4   | C       |
+| 3    | 8   | A       |
+| 4    | 8   | B       |
+| 5    | 8   | C       |
+| 6    | 5   | A       |
 
 ---
 
-### `BRANCH` Table
+### `CLASS` Table
 
 ```sql
-CREATE TABLE BRANCH (
-    BRANCH_ID VARCHAR(10),
-    BANK_NAME VARCHAR(15),
-    BRANCH_NAME VARCHAR(20),
-    ASSETS INT NOT NULL,
-    PRIMARY KEY(BRANCH_ID)
+CREATE TABLE CLASS (
+    SSID NUMBER(5),
+    USN VARCHAR2(20),
+    PRIMARY KEY(USN),
+    FOREIGN KEY(SSID) REFERENCES SEMSEC(SSID),
+    FOREIGN KEY(USN) REFERENCES STUDENT(USN)
 );
 ```
 
 **Output** (empty table after creation):
 
-| BRANCH_ID | BANK_NAME      | BRANCH_NAME | ASSETS   |
-|-----------|----------------|-------------|----------|
+| SSID | USN          |
+|------|--------------|
+|      |              |
 
-#### Inserting Data into `BRANCH`:
+#### Inserting Data into `CLASS`:
 
 ```sql
-INSERT INTO BRANCH VALUES ('B1', 'CANARA', 'MANGALURU', 60000000);
-INSERT INTO BRANCH VALUES ('B2', 'BANK OF BARODA', 'MANGALURU', 70000000);
-INSERT INTO BRANCH VALUES ('B3', 'CANARA', 'KASARAGOD', 50000000);
-INSERT INTO BRANCH VALUES ('B4', 'SBI', 'BENGALURU', 30000000);
-INSERT INTO BRANCH VALUES ('B5', 'UNION BANK', 'DELHI', 20000000);
+INSERT INTO CLASS VALUES(1, '4SF20CD001');
+INSERT INTO CLASS VALUES(2, '4SF20CS088');
+INSERT INTO CLASS VALUES(3, '4SF20CS089');
+INSERT INTO CLASS VALUES(4, '4SF20IS109');
+INSERT INTO CLASS VALUES(5, '4SF20CS098');
 ```
 
 **Output** after insertion:
 
-| BRANCH_ID | BANK_NAME      | BRANCH_NAME | ASSETS   |
-|-----------|----------------|-------------|----------|
-| B1        | CANARA         | MANGALURU   | 60000000 |
-| B2        | BANK OF BARODA | MANGALURU   | 70000000 |
-| B3        | CANARA         | KASARAGOD   | 50000000 |
-| B4        | SBI            | BENGALURU   | 30000000 |
-| B5        | UNION BANK     | DELHI       | 20000000 |
+| SSID | USN          |
+|------|--------------|
+| 1    | 4SF20CD001   |
+| 2    | 4SF20CS088   |
+| 3    | 4SF20CS089   |
+| 4    | 4SF20IS109   |
+| 5    | 4SF20CS098   |
 
 ---
 
-### `LOAN` Table
+### `SUBJECT` Table
 
 ```sql
-CREATE TABLE LOAN (
-    LOAN_NUMBER VARCHAR(5),
-    BRANCH_ID VARCHAR(10),
-    AMOUNT INT,
-    CUSTOMER_ID VARCHAR(10),
-    PRIMARY KEY(LOAN_NUMBER),
-    FOREIGN KEY(BRANCH_ID) REFERENCES BRANCH(BRANCH_ID) ON DELETE CASCADE,
-    FOREIGN KEY(CUSTOMER_ID) REFERENCES CUSTOMER(CUSTOMER_ID) ON DELETE CASCADE
+CREATE TABLE SUBJECT (
+    SUBCODE VARCHAR2(7) PRIMARY KEY,
+    TITLE VARCHAR2(20),
+    SEM NUMBER(4),
+    CREDIT NUMBER(2)
 );
 ```
 
 **Output** (empty table after creation):
 
-| LOAN_NUMBER | BRANCH_ID | AMOUNT | CUSTOMER_ID |
-|-------------|-----------|--------|-------------|
+| SUBCODE | TITLE        | SEM | CREDIT |
+|---------|--------------|-----|--------|
+|         |              |     |        |
 
-#### Inserting Data into `LOAN`:
+#### Inserting Data into `SUBJECT`:
 
 ```sql
-INSERT INTO LOAN VALUES ('L1', 'B1', 500000, 'C1');
-INSERT INTO LOAN VALUES ('L2', 'B2', 50000, 'C2');
-INSERT INTO LOAN VALUES ('L3', 'B3', 40000, 'C3');
-INSERT INTO LOAN VALUES ('L4', 'B2', 565000, 'C4');
-INSERT INTO LOAN VALUES ('L5', 'B4', 955000, 'C5');
-INSERT INTO LOAN VALUES ('L6', 'B5', 20000, 'C2');
+INSERT INTO SUBJECT VALUES('20CS31', 'DATA STRUCTURE', 4, 4);
+INSERT INTO SUBJECT VALUES('20CS32', 'UNIX', 4, 3);
+INSERT INTO SUBJECT VALUES('20CS33', 'DBMS', 5, 4);
+INSERT INTO SUBJECT VALUES('20CS34', 'DCN', 5, 3);
+INSERT INTO SUBJECT VALUES('20CS35', 'AIML', 8, 4);
 ```
 
 **Output** after insertion:
 
-| LOAN_NUMBER | BRANCH_ID | AMOUNT  | CUSTOMER_ID |
-|-------------|-----------|---------|-------------|
-| L1          | B1        | 500000  | C1          |
-| L2          | B2        | 50000   | C2          |
-| L3          | B3        | 40000   | C3          |
-| L4          | B2        | 565000  | C4          |
-| L5          | B4        | 955000  | C5          |
-| L6          | B5        | 20000   | C2          |
+| SUBCODE | TITLE           | SEM | CREDIT |
+|---------|-----------------|-----|--------|
+| 20CS31  | DATA STRUCTURE  | 4   | 4      |
+| 20CS32  | UNIX            | 4   | 3      |
+| 20CS33  | DBMS            | 5   | 4      |
+| 20CS34  | DCN             | 5   | 3      |
+| 20CS35  | AIML            | 8   | 4      |
+
+---
+
+### `IAMARKS` Table
+
+```sql
+CREATE TABLE IAMARKS (
+    USN VARCHAR2(20),
+    SSID NUMBER(5),
+    SUBCODE VARCHAR2(7),
+    TEST1 NUMBER(3),
+    TEST2 NUMBER(3),
+    TEST3 NUMBER(3),
+    FINALIA NUMBER(3),
+    PRIMARY KEY(USN, SUBCODE, SSID),
+    FOREIGN KEY(USN) REFERENCES STUDENT(USN),
+    FOREIGN KEY(SUBCODE) REFERENCES SUBJECT(SUBCODE),
+    FOREIGN KEY(SSID) REFERENCES SEMSEC(SSID)
+);
+```
+
+**Output** (empty table after creation):
+
+| USN          | SSID | SUBCODE | TEST1 | TEST2 | TEST3 | FINALIA |
+|--------------|------|---------|-------|-------|-------|---------|
+|              |      |         |       |       |       |         |
+
+#### Inserting Data into `IAMARKS`:
+
+```sql
+INSERT INTO IAMARKS VALUES('4SF20CD001', 1, '20CS31', 38, 35, 32, 0);
+INSERT INTO IAMARKS VALUES('4SF20CD001', 1, '20CS32', 28, 26, 29, 0);
+INSERT INTO IAMARKS VALUES('4SF20CS088', 2, '20CS31', 38, 42, 32, 0);
+INSERT INTO IAMARKS VALUES('4SF20CS089', 3, '20CS33', 42, 46, 41, 0);
+INSERT INTO IAMARKS VALUES('4SF20IS109', 4, '20CS34', 28, 26, 29, 0);
+INSERT INTO IAMARKS VALUES('4SF20CS098', 5, '20CS35', 48, 46, 50, 0);
+```
+
+**Output** after insertion:
+
+| USN          | SSID | SUBCODE | TEST1 | TEST2 | TEST3 | FINALIA |
+|--------------|------|---------|-------|-------|-------|---------|
+| 4SF20CD001   | 1    | 20CS31  | 38    | 35    | 32    | 0       |
+| 4SF20CD001   | 1    | 20CS32  | 28    | 26    | 29    | 0       |
+| 4SF20CS088   | 2    | 20CS31  | 38    | 42    | 32    | 0       |
+| 4SF20CS089   | 3    | 20CS33  | 42    | 46    | 41    | 0       |
+| 4SF20IS109   | 4    | 20CS34  | 28    | 26    | 29    | 0       |
+| 4SF20CS098   | 5    | 20CS35  | 48    | 46    | 50    | 0       |
 
 ---
 
@@ -171,99 +222,115 @@ INSERT INTO LOAN VALUES ('L6', 'B5', 20000, 'C2');
 
 ### Query 1
 
-Retrieve customer names and IDs for customers who have accounts in the branch `MANGALURU`:
+List all students who are in section 'C' and are in semester '4':
 
 ```sql
-SELECT C.CUSTOMER_ID, C.CUSTOMER_NAME
-FROM CUSTOMER C, ACCOUNT A, BRANCH B
-WHERE B.BRANCH_NAME = 'MANGALURU'
-AND B.BRANCH_ID = A.BRANCH_ID
-AND A.CUSTOMER_ID = C.CUSTOMER_ID;
+SELECT A.*, B.SEM, B.SECTION 
+FROM STUDENT A, SEMSEC B, CLASS C 
+WHERE A.USN = B.USN 
+AND C.SSID = A.SSID 
+AND B.SEM = 4 
+AND A.SECTION = 'C';
 ```
 
 **Expected Output**:
 
-| CUSTOMER_ID | CUSTOMER_NAME |
-|-------------|---------------|
-| C1          | RAVI          |
-| C4          | ARPITHA       |
+| USN          | SNAME   | ADDRESS  | PHONE     | G
+
+ENDER | SEM | SECTION |
+|--------------|---------|----------|-----------|--------|-----|---------|
+| 4SF20IS109   | VARSHINI| BANTWAL  | 896523    | FEMALE | 4   | C       |
 
 ---
 
 ### Query 2
 
-Retrieve the customer names and their highest account balance:
+Get the count of students grouped by gender, semester, and section:
 
 ```sql
-SELECT C.CUSTOMER_ID, C.CUSTOMER_NAME, A.ACCOUNT_BALANCE
-FROM CUSTOMER C, ACCOUNT A
-WHERE C.CUSTOMER_ID = A.CUSTOMER_ID
-AND A.ACCOUNT_BALANCE = (SELECT MAX(ACCOUNT_BALANCE) FROM ACCOUNT);
+SELECT sem, section, gender, count(*) 
+FROM student s, semsec s1, class c 
+WHERE S1.usn = c.usn 
+AND S1.ssid = c.ssid 
+GROUP BY gender, sem, section 
+ORDER BY sem
+LIMIT 1000;
 ```
 
 **Expected Output**:
 
-| CUSTOMER_ID | CUSTOMER_NAME | ACCOUNT_BALANCE |
-|-------------|---------------|-----------------|
-| C3          | VARUN         | 90000           |
+| SEM | SECTION | GENDER | COUNT(*) |
+|-----|---------|--------|----------|
+| 4   | C       | FEMALE | 1        |
 
 ---
 
 ### Query 3
 
-Retrieve customer names and loan amounts where loan amounts are greater than 500000:
+Create a view to display marks for a specific student (4SF20CD001) in semester 4:
 
 ```sql
-SELECT C.CUSTOMER_NAME, L.AMOUNT
-FROM CUSTOMER C, LOAN L
-WHERE C.CUSTOMER_ID = L.CUSTOMER_ID
-AND L.AMOUNT > 500000;
+CREATE VIEW TEST_MARKS AS 
+SELECT SUBCODE, TEST1 
+FROM IAMARKS 
+WHERE USN = '4SF20CD001' AND SEM = 4;
+SELECT * FROM TEST_MARKS;
 ```
 
 **Expected Output**:
 
-| CUSTOMER_NAME | AMOUNT |
-|---------------|--------|
-| ARPITHA       | 565000 |
-| SACHIN        | 955000 |
+| SUBCODE | TEST1 |
+|---------|-------|
+| 20CS31  | 38    |
+| 20CS32  | 28    |
 
 ---
 
 ### Query 4
 
-Get the branches with the highest and lowest assets:
+Update `FINALIA` marks by applying GREATEST and calculate average:
 
 ```sql
-SELECT BANK_NAME, BRANCH_NAME, ASSETS
-FROM BRANCH
-WHERE ASSETS = (SELECT MAX(ASSETS) FROM BRANCH)
-UNION
-SELECT BANK_NAME, BRANCH_NAME, ASSETS
-FROM BRANCH
-WHERE ASSETS = (SELECT MIN(ASSETS) FROM BRANCH);
+UPDATE iamarks 
+SET finalia = GREATEST((test1 + test3), (test3 + test2), (test3 + test2)) / 2;
 ```
 
-**Expected Output**:
+**Expected Output**:  
+The `FINALIA` marks for each student are updated with the calculated average values.
 
-| BANK_NAME     | BRANCH_NAME | ASSETS |
-|---------------|-------------|--------|
-| BANK OF BARODA| MANGALURU   | 70000000|
-| UNION BANK    | DELHI       | 20000000|
+| USN          | SSID | SUBCODE | TEST1 | TEST2 | TEST3 | FINALIA |
+|--------------|------|---------|-------|-------|-------|---------|
+| 4SF20CD001   | 1    | 20CS31  | 38    | 35    | 32    | 35.0    |
+| 4SF20CD001   | 1    | 20CS32  | 28    | 26    | 29    | 27.5    |
+| 4SF20CS088   | 2    | 20CS31  | 38    | 42    | 32    | 37.0    |
+| 4SF20CS089   | 3    | 20CS33  | 42    | 46    | 41    | 44.0    |
+| 4SF20IS109   | 4    | 20CS34  | 28    | 26    | 29    | 27.5    |
+| 4SF20CS098   | 5    | 20CS35  | 48    | 46    | 50    | 49.0    |
 
 ---
 
 ### Query 5
 
-Delete branch `DELHI`:
+Get the student USN and category based on final exam marks:
 
 ```sql
-DELETE FROM BRANCH WHERE BRANCH_NAME = 'DELHI';
+SELECT usn, finalia, 
+CASE 
+    WHEN finalia BETWEEN 45 AND 50 THEN 'OUTSTANDING'
+    WHEN finalia BETWEEN 40 AND 45 THEN 'GOOD'
+    WHEN finalia BETWEEN 30 AND 40 THEN 'AVERAGE'
+    WHEN finalia < 30 THEN 'WEAK'
+END 
+AS CATEGORY 
+FROM iamarks;
 ```
 
-**Expected Output**:  
-The branch `DELHI` is removed from the `BRANCH` table.
+**Expected Output**:
 
----
-```
-
-In this `README.md`, each SQL query is described alongside the table structure and data insertion. The expected output for each step is also provided, allowing easy validation of the table creations, insertions, and queries executed on the database.
+| USN          | FINALIA | CATEGORY  |
+|--------------|---------|-----------|
+| 4SF20CD001   | 35.0    | AVERAGE   |
+| 4SF20CS088   | 37.0    | AVERAGE   |
+| 4SF20CS089   | 44.0    | GOOD      |
+| 4SF20IS109   | 27.5    | WEAK      |
+| 4SF20CS098   | 49.0    | OUTSTANDING |
