--- a/1.md
+++ b/1.md
@@ -1,330 +1,156 @@
+#  1 lab program
+
+#BRANCH(Branch_id, Bank_name, Branch_name, Assets)
+#ACCOUNT(Acc_no, Branch_id, Account_Type, Account_Balance, Customer_id)
+#CUSTOMER(Customer_id, Customer_name, Customer_age, Customer_address, Customer_phone)
+#LOAN(Loan_number, Branch_id, Amount, Customer_id)
 
 
-#Consider the schema for College Database:
-## Table Structure and Output
-
-### `STUDENT` Table
-
+### Table: BRANCH
 ```sql
-CREATE TABLE STUDENT (
-    USN VARCHAR2(20),
-    SNAME VARCHAR2(10),
-    ADDRESS VARCHAR2(10),
-    PHONE NUMBER(10),
-    GENDER VARCHAR2(10),
-    PRIMARY KEY(USN)
+CREATE TABLE BRANCH(
+  BRANCH_ID VARCHAR(10),
+  BANK_NAME VARCHAR(15),
+  BRANCH_NAME VARCHAR(20),
+  ASSETS INT NOT NULL,
+  PRIMARY KEY(BRANCH_ID)
 );
 ```
+#### Example Data
+| BRANCH_ID | BANK_NAME       | BRANCH_NAME | ASSETS   |
+|-----------|-----------------|-------------|----------|
+| B1        | CANARA          | MANGALURU   | 60000000 |
+| B2        | BANK OF BARODA  | MANGALURU   | 70000000 |
+| B3        | CANARA          | KASARAGOD   | 50000000 |
+| B4        | SBI             | BENGALURU   | 30000000 |
+| B5        | UNION BANK      | DELHI       | 20000000 |
 
-**Output** (empty table after creation):
-
-| USN          | SNAME | ADDRESS    | PHONE    | GENDER |
-|--------------|-------|------------|----------|--------|
-| (Empty Table) |       |            |          |        |
-
-#### Inserting Data into `STUDENT`:
-
+### Table: CUSTOMER
 ```sql
-INSERT INTO STUDENT VALUES ('4SF20CS089', 'AJAY', 'MANGALORE', 733825, 'MALE');
-INSERT INTO STUDENT VALUES ('4SF20IS109', 'VARSHINI', 'BANTWAL', 896523, 'FEMALE');
-INSERT INTO STUDENT VALUES ('4SF20CS098', 'NAVISH', 'UDUPI', 9956258, 'MALE');
-INSERT INTO STUDENT VALUES ('4SF20CD001', 'SAHANA', 'SURATHKAL', 8752683, 'FEMALE');
-INSERT INTO STUDENT VALUES ('4SF20CS088', 'KAVYA', 'MANGALORE', 78965231, 'FEMALE');
-```
-
-**Output** after insertion:
-
-| USN          | SNAME   | ADDRESS    | PHONE     | GENDER |
-|--------------|---------|------------|-----------|--------|
-| 4SF20CS089   | AJAY    | MANGALORE  | 733825    | MALE   |
-| 4SF20IS109   | VARSHINI| BANTWAL    | 896523    | FEMALE |
-| 4SF20CS098   | NAVISH  | UDUPI      | 9956258   | MALE   |
-| 4SF20CD001   | SAHANA  | SURATHKAL  | 8752683   | FEMALE |
-| 4SF20CS088   | KAVYA   | MANGALORE  | 78965231  | FEMALE |
-
----
-
-### `SEMSEC` Table
-
-```sql
-CREATE TABLE SEMSEC (
-    SSID NUMBER(5),
-    SEM NUMBER(2),
-    SECTION VARCHAR2(1),
-    PRIMARY KEY(SSID)
+CREATE TABLE CUSTOMER(
+  CUSTOMER_ID VARCHAR(10),
+  CUSTOMER_NAME VARCHAR(20),
+  CUSTOMER_AGE INT,
+  CUSTOMER_ADDRESS VARCHAR(20),
+  CUSTOMER_PHONE INT,
+  PRIMARY KEY(CUSTOMER_ID)
 );
 ```
+#### Example Data
+| CUSTOMER_ID | CUSTOMER_NAME | CUSTOMER_AGE | CUSTOMER_ADDRESS | CUSTOMER_PHONE |
+|-------------|---------------|--------------|------------------|----------------|
+| C1          | RAVI          | 22           | MANGALURU        | 8745263        |
+| C2          | ASHA          | 26           | DELHI            | 98745641       |
+| C3          | VARUN         | 23           | KASARGOD         | 78954623       |
+| C4          | ARPITHA       | 22           | MANGALURU        | 9856325        |
+| C5          | SACHIN        | 23           | BENGALORE        | 78541365       |
 
-**Output** (empty table after creation):
-
-| SSID | SEM | SECTION |
-|------|-----|---------|
-|      |     |         |
-
-#### Inserting Data into `SEMSEC`:
-
+### Table: ACCOUNT
 ```sql
-INSERT INTO SEMSEC VALUES(1, 4, 'A');
-INSERT INTO SEMSEC VALUES(2, 4, 'C');
-INSERT INTO SEMSEC VALUES(3, 8, 'A');
-INSERT INTO SEMSEC VALUES(4, 8, 'B');
-INSERT INTO SEMSEC VALUES(5, 8, 'C');
-INSERT INTO SEMSEC VALUES(6, 5, 'A');
-```
-
-**Output** after insertion:
-
-| SSID | SEM | SECTION |
-|------|-----|---------|
-| 1    | 4   | A       |
-| 2    | 4   | C       |
-| 3    | 8   | A       |
-| 4    | 8   | B       |
-| 5    | 8   | C       |
-| 6    | 5   | A       |
-
----
-
-### `CLASS` Table
-
-```sql
-CREATE TABLE CLASS (
-    SSID NUMBER(5),
-    USN VARCHAR2(20),
-    PRIMARY KEY(USN),
-    FOREIGN KEY(SSID) REFERENCES SEMSEC(SSID),
-    FOREIGN KEY(USN) REFERENCES STUDENT(USN)
+CREATE TABLE ACCOUNT(
+  ACC_NO INT,
+  BRANCH_ID VARCHAR(10),
+  ACCOUNT_TYPE VARCHAR(10),
+  ACCOUNT_BALANCE INT,
+  CUSTOMER_ID VARCHAR(10),
+  PRIMARY KEY(ACC_NO),
+  FOREIGN KEY (BRANCH_ID) REFERENCES BRANCH(BRANCH_ID) ON DELETE CASCADE,
+  FOREIGN KEY(CUSTOMER_ID) REFERENCES CUSTOMER(CUSTOMER_ID) ON DELETE CASCADE
 );
 ```
+#### Example Data
+| ACC_NO | BRANCH_ID | ACCOUNT_TYPE | ACCOUNT_BALANCE | CUSTOMER_ID |
+|--------|-----------|--------------|-----------------|-------------|
+| 123    | B1        | SAVINGS      | 10000           | C1          |
+| 456    | B5        | RECURRING    | 20000           | C2          |
+| 789    | B1        | SAVINGS      | 30000           | C1          |
+| 1122   | B2        | FD           | 5000            | C3          |
+| 1334   | B1        | SAVINGS      | 10000           | C4          |
+| 1234   | B3        | FD           | 90000           | C5          |
+| 5876   | B4        | RECURRING    | 80000           | C3          |
 
-**Output** (empty table after creation):
-
-| SSID | USN          |
-|------|--------------|
-|      |              |
-
-#### Inserting Data into `CLASS`:
-
+### Table: LOAN
 ```sql
-INSERT INTO CLASS VALUES(1, '4SF20CD001');
-INSERT INTO CLASS VALUES(2, '4SF20CS088');
-INSERT INTO CLASS VALUES(3, '4SF20CS089');
-INSERT INTO CLASS VALUES(4, '4SF20IS109');
-INSERT INTO CLASS VALUES(5, '4SF20CS098');
-```
-
-**Output** after insertion:
-
-| SSID | USN          |
-|------|--------------|
-| 1    | 4SF20CD001   |
-| 2    | 4SF20CS088   |
-| 3    | 4SF20CS089   |
-| 4    | 4SF20IS109   |
-| 5    | 4SF20CS098   |
-
----
-
-### `SUBJECT` Table
-
-```sql
-CREATE TABLE SUBJECT (
-    SUBCODE VARCHAR2(7) PRIMARY KEY,
-    TITLE VARCHAR2(20),
-    SEM NUMBER(4),
-    CREDIT NUMBER(2)
+CREATE TABLE LOAN(
+  LOAN_NUMBER VARCHAR2(5),
+  BRANCH_ID VARCHAR(10),
+  AMOUNT INT,
+  CUSTOMER_ID VARCHAR(10),
+  PRIMARY KEY(LOAN_NUMBER),
+  FOREIGN KEY (BRANCH_ID) REFERENCES BRANCH(BRANCH_ID) ON DELETE CASCADE,
+  FOREIGN KEY(CUSTOMER_ID) REFERENCES CUSTOMER(CUSTOMER_ID) ON DELETE CASCADE
 );
 ```
+#### Example Data
+| LOAN_NUMBER | BRANCH_ID | AMOUNT  | CUSTOMER_ID |
+|-------------|-----------|---------|-------------|
+| L1          | B1        | 500000 | C1          |
+| L2          | B2        | 50000  | C2          |
+| L3          | B3        | 40000  | C3          |
+| L4          | B2        | 565000 | C4          |
+| L5          | B4        | 955000 | C5          |
+| L6          | B5        | 20000  | C2          |
 
-**Output** (empty table after creation):
+## Queries and Results
 
-| SUBCODE | TITLE        | SEM | CREDIT |
-|---------|--------------|-----|--------|
-|         |              |     |        |
-
-#### Inserting Data into `SUBJECT`:
-
+### Query 1: Find all customers who have at least one account at the "Mangaluru" branch.
 ```sql
-INSERT INTO SUBJECT VALUES('20CS31', 'DATA STRUCTURE', 4, 4);
-INSERT INTO SUBJECT VALUES('20CS32', 'UNIX', 4, 3);
-INSERT INTO SUBJECT VALUES('20CS33', 'DBMS', 5, 4);
-INSERT INTO SUBJECT VALUES('20CS34', 'DCN', 5, 3);
-INSERT INTO SUBJECT VALUES('20CS35', 'AIML', 8, 4);
+SELECT C.CUSTOMER_ID, C.CUSTOMER_NAME 
+FROM CUSTOMER C, ACCOUNT A, BRANCH B
+WHERE B.BRANCH_NAME = 'MANGALURU' 
+  AND B.BRANCH_ID = A.BRANCH_ID 
+  AND A.CUSTOMER_ID = C.CUSTOMER_ID;
 ```
+#### Result:
+| CUSTOMER_ID | CUSTOMER_NAME |
+|-------------|---------------|
+| C1          | RAVI          |
+| C1          | RAVI          |
+| C3          | VARUN         |
+| C4          | ARPITHA       |
 
-**Output** after insertion:
-
-| SUBCODE | TITLE           | SEM | CREDIT |
-|---------|-----------------|-----|--------|
-| 20CS31  | DATA STRUCTURE  | 4   | 4      |
-| 20CS32  | UNIX            | 4   | 3      |
-| 20CS33  | DBMS            | 5   | 4      |
-| 20CS34  | DCN             | 5   | 3      |
-| 20CS35  | AIML            | 8   | 4      |
-
----
-
-### `IAMARKS` Table
-
+### Query 2: Find customers who have an account at all branches in a specific city.
 ```sql
-CREATE TABLE IAMARKS (
-    USN VARCHAR2(20),
-    SSID NUMBER(5),
-    SUBCODE VARCHAR2(7),
-    TEST1 NUMBER(3),
-    TEST2 NUMBER(3),
-    TEST3 NUMBER(3),
-    FINALIA NUMBER(3),
-    PRIMARY KEY(USN, SUBCODE, SSID),
-    FOREIGN KEY(USN) REFERENCES STUDENT(USN),
-    FOREIGN KEY(SUBCODE) REFERENCES SUBJECT(SUBCODE),
-    FOREIGN KEY(SSID) REFERENCES SEMSEC(SSID)
+SELECT C.CUSTOMER_ID, C.CUSTOMER_NAME, A.ACCOUNT_BALANCE
+FROM CUSTOMER C, ACCOUNT A
+WHERE C.CUSTOMER_ID = A.CUSTOMER_ID 
+  AND ACCOUNT_BALANCE = (
+    SELECT MAX(ACCOUNT_BALANCE) FROM ACCOUNT
 );
 ```
+#### Result:
+| CUSTOMER_ID | CUSTOMER_NAME | ACCOUNT_BALANCE |
+|-------------|---------------|-----------------|
+| C5          | SACHIN        | 90000           |
 
-**Output** (empty table after creation):
-
-| USN          | SSID | SUBCODE | TEST1 | TEST2 | TEST3 | FINALIA |
-|--------------|------|---------|-------|-------|-------|---------|
-|              |      |         |       |       |       |         |
-
-#### Inserting Data into `IAMARKS`:
-
+### Query 3: Retrieve the customer name and loan amount for loans greater than 500,000.
 ```sql
-INSERT INTO IAMARKS VALUES('4SF20CD001', 1, '20CS31', 38, 35, 32, 0);
-INSERT INTO IAMARKS VALUES('4SF20CD001', 1, '20CS32', 28, 26, 29, 0);
-INSERT INTO IAMARKS VALUES('4SF20CS088', 2, '20CS31', 38, 42, 32, 0);
-INSERT INTO IAMARKS VALUES('4SF20CS089', 3, '20CS33', 42, 46, 41, 0);
-INSERT INTO IAMARKS VALUES('4SF20IS109', 4, '20CS34', 28, 26, 29, 0);
-INSERT INTO IAMARKS VALUES('4SF20CS098', 5, '20CS35', 48, 46, 50, 0);
+SELECT C.CUSTOMER_NAME, L.AMOUNT 
+FROM CUSTOMER C, LOAN L 
+WHERE C.CUSTOMER_ID = L.CUSTOMER_ID 
+  AND L.AMOUNT > 500000;
 ```
+#### Result:
+| CUSTOMER_NAME | AMOUNT  |
+|---------------|---------|
+| ARPITHA       | 565000  |
+| SACHIN        | 955000  |
 
-**Output** after insertion:
-
-| USN          | SSID | SUBCODE | TEST1 | TEST2 | TEST3 | FINALIA |
-|--------------|------|---------|-------|-------|-------|---------|
-| 4SF20CD001   | 1    | 20CS31  | 38    | 35    | 32    | 0       |
-| 4SF20CD001   | 1    | 20CS32  | 28    | 26    | 29    | 0       |
-| 4SF20CS088   | 2    | 20CS31  | 38    | 42    | 32    | 0       |
-| 4SF20CS089   | 3    | 20CS33  | 42    | 46    | 41    | 0       |
-| 4SF20IS109   | 4    | 20CS34  | 28    | 26    | 29    | 0       |
-| 4SF20CS098   | 5    | 20CS35  | 48    | 46    | 50    | 0       |
-
----
-
-## SQL Queries and Expected Output
-
-### Query 1
-
-List all students who are in section 'C' and are in semester '4':
-
+### Query 4: Retrieve bank branch details with maximum and minimum assets.
 ```sql
-SELECT A.*, B.SEM, B.SECTION 
-FROM STUDENT A, SEMSEC B, CLASS C 
-WHERE A.USN = B.USN 
-AND C.SSID = A.SSID 
-AND B.SEM = 4 
-AND A.SECTION = 'C';
+SELECT BANK_NAME, BRANCH_NAME, ASSETS FROM BRANCH
+WHERE ASSETS = (SELECT MAX(ASSETS) FROM BRANCH)
+UNION
+SELECT BANK_NAME, BRANCH_NAME, ASSETS FROM BRANCH
+WHERE ASSETS = (SELECT MIN(ASSETS) FROM BRANCH);
 ```
+#### Result:
+| BANK_NAME       | BRANCH_NAME | ASSETS   |
+|-----------------|-------------|----------|
+| BANK OF BARODA  | MANGALURU   | 70000000 |
+| UNION BANK      | DELHI       | 20000000 |
 
-**Expected Output**:
-
-| USN          | SNAME   | ADDRESS  | PHONE     | G
-
-ENDER | SEM | SECTION |
-|--------------|---------|----------|-----------|--------|-----|---------|
-| 4SF20IS109   | VARSHINI| BANTWAL  | 896523    | FEMALE | 4   | C       |
-
----
-
-### Query 2
-
-Get the count of students grouped by gender, semester, and section:
-
+### Query 5: Delete all account tuples at branches located in a specific city.
 ```sql
-SELECT sem, section, gender, count(*) 
-FROM student s, semsec s1, class c 
-WHERE S1.usn = c.usn 
-AND S1.ssid = c.ssid 
-GROUP BY gender, sem, section 
-ORDER BY sem
-LIMIT 1000;
+DELETE FROM BRANCH WHERE BRANCH_NAME = 'DELHI';
 ```
-
-**Expected Output**:
-
-| SEM | SECTION | GENDER | COUNT(*) |
-|-----|---------|--------|----------|
-| 4   | C       | FEMALE | 1        |
-
----
-
-### Query 3
-
-Create a view to display marks for a specific student (4SF20CD001) in semester 4:
-
-```sql
-CREATE VIEW TEST_MARKS AS 
-SELECT SUBCODE, TEST1 
-FROM IAMARKS 
-WHERE USN = '4SF20CD001' AND SEM = 4;
-SELECT * FROM TEST_MARKS;
-```
-
-**Expected Output**:
-
-| SUBCODE | TEST1 |
-|---------|-------|
-| 20CS31  | 38    |
-| 20CS32  | 28    |
-
----
-
-### Query 4
-
-Update `FINALIA` marks by applying GREATEST and calculate average:
-
-```sql
-UPDATE iamarks 
-SET finalia = GREATEST((test1 + test3), (test3 + test2), (test3 + test2)) / 2;
-```
-
-**Expected Output**:  
-The `FINALIA` marks for each student are updated with the calculated average values.
-
-| USN          | SSID | SUBCODE | TEST1 | TEST2 | TEST3 | FINALIA |
-|--------------|------|---------|-------|-------|-------|---------|
-| 4SF20CD001   | 1    | 20CS31  | 38    | 35    | 32    | 35.0    |
-| 4SF20CD001   | 1    | 20CS32  | 28    | 26    | 29    | 27.5    |
-| 4SF20CS088   | 2    | 20CS31  | 38    | 42    | 32    | 37.0    |
-| 4SF20CS089   | 3    | 20CS33  | 42    | 46    | 41    | 44.0    |
-| 4SF20IS109   | 4    | 20CS34  | 28    | 26    | 29    | 27.5    |
-| 4SF20CS098   | 5    | 20CS35  | 48    | 46    | 50    | 49.0    |
-
----
-
-### Query 5
-
-Get the student USN and category based on final exam marks:
-
-```sql
-SELECT usn, finalia, 
-CASE 
-    WHEN finalia BETWEEN 45 AND 50 THEN 'OUTSTANDING'
-    WHEN finalia BETWEEN 40 AND 45 THEN 'GOOD'
-    WHEN finalia BETWEEN 30 AND 40 THEN 'AVERAGE'
-    WHEN finalia < 30 THEN 'WEAK'
-END 
-AS CATEGORY 
-FROM iamarks;
-```
-
-**Expected Output**:
-
-| USN          | FINALIA | CATEGORY  |
-|--------------|---------|-----------|
-| 4SF20CD001   | 35.0    | AVERAGE   |
-| 4SF20CS088   | 37.0    | AVERAGE   |
-| 4SF20CS089   | 44.0    | GOOD      |
-| 4SF20IS109   | 27.5    | WEAK      |
-| 4SF20CS098   | 49.0    | OUTSTANDING |
