--- a/1.md
+++ b/1.md
@@ -1,10 +1,10 @@
 #  1 lab program
-
-# BRANCH(Branch_id, Bank_name, Branch_name, Assets)
-# ACCOUNT(Acc_no, Branch_id, Account_Type, Account_Balance, Customer_id)
-# CUSTOMER(Customer_id, Customer_name, Customer_age, Customer_address, Customer_phone)
-# LOAN(Loan_number, Branch_id, Amount, Customer_id)
-
+<br>
+## BRANCH(Branch_id, Bank_name, Branch_name, Assets)
+## ACCOUNT(Acc_no, Branch_id, Account_Type, Account_Balance, Customer_id)
+## CUSTOMER(Customer_id, Customer_name, Customer_age, Customer_address, Customer_phone)
+## LOAN(Loan_number, Branch_id, Amount, Customer_id)
+<br>
 
 ### Table: BRANCH
 ```sql
